--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -82,66 +82,33 @@ font=Iosevka Term:size=13
 # long-press-delay=400
 
 [colors]
-# alpha=1.0
-#background=282a36
-#foreground=f8f8f2
+# Start flavours
+# Base16 Generated - foot color config
+# Flavours
+[colors]
+background=2e241e
+foreground=dfd8d3
 
-## Normal/regular colors (color palette 0-7)
-#regular0=21222c  # black
-#regular1=ff5555  # red
-#regular2=50fa7b  # green
-#regular3=f1fa8c  # yellow
-#regular4=bd93f9  # blue
-#regular5=ff79c6  # magenta
-#regular6=8be9fd  # cyan
-#regular7=f8f8f2  # white
+# Normal colors
+regular0=2e241e # Black, could also be base01
+regular1=617d83 # Red
+regular2=ddc1a8 # Green
+regular3=c0bebb # Yellow
+regular4=a7adb1 # Blue
+regular5=fbf8f4 # Magenta
+regular6=c9ad9f # Cyan
+regular7=dfd8d3 # White
 
-## Bright colors (color palette 8-15)
-#bright0=6272a4   # bright black
-#bright1=ff6e6e   # bright red
-#bright2=69ff94   # bright green
-#bright3=ffffa5   # bright yellow
-#bright4=d6acff   # bright blue
-#bright5=ff92df   # bright magenta
-#bright6=a4ffff   # bright cyan
-#bright7=ffffff   # bright white
-
-## dimmed colors (see foot.ini(5) man page)
-# dim0=<not set>
-# ...
-# dim7=<not-set>
-
-## The remaining 256-color palette
-# 16 = <256-color palette #16>
-# ...
-# 255 = <256-color palette #255>
-
-## Misc colors
-#selection-foreground=ffffff
-#selection-background=44475a
-# jump-labels=<regular0> <regular3>          # black-on-yellow
-# scrollback-indicator=<regular0> <bright4>  # black-on-bright-blue
-# search-box-no-match=<regular0> <regular1>  # black-on-red
-# search-box-match=<regular0> <regular3>     # black-on-yellow
-urls=8be9fd
-
-## Sixel colors
-# sixel0 =  000000
-# sixel1 =  3333cc
-# sixel2 =  cc2121
-# sixel3 =  33cc33
-# sixel4 =  cc33cc
-# sixel5 =  33cccc
-# sixel6 =  cccc33
-# sixel7 =  878787
-# sixel8 =  424242
-# sixel9 =  545499
-# sixel10 = 994242
-# sixel11 = 549954
-# sixel12 = 995499
-# sixel13 = 549999
-# sixel14 = 999954
-# sixel15 = cccccc
+# Bright colors
+bright0=99908b
+bright1=6f75a4
+bright2=524843
+bright3=756c67
+bright4=bcb4af
+bright5=e4deda
+bright6=c5a784
+bright7=e9e4e0
+# End flavours
 
 [csd]
 # preferred=server
