--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -83,31 +83,31 @@ font=Iosevka Term:size=13
 
 [colors]
 # Start flavours
-# Base16 Generated - foot color config
-# Flavours
+# Base16 Zenburn - foot color config
+# elnawe
 [colors]
-background=2e241e
-foreground=dfd8d3
+background=383838
+foreground=dcdccc
 
 # Normal colors
-regular0=2e241e # Black, could also be base01
-regular1=617d83 # Red
-regular2=ddc1a8 # Green
-regular3=c0bebb # Yellow
-regular4=a7adb1 # Blue
-regular5=fbf8f4 # Magenta
-regular6=c9ad9f # Cyan
-regular7=dfd8d3 # White
+regular0=383838 # Black, could also be base01
+regular1=dca3a3 # Red
+regular2=5f7f5f # Green
+regular3=e0cf9f # Yellow
+regular4=7cb8bb # Blue
+regular5=dc8cc3 # Magenta
+regular6=93e0e3 # Cyan
+regular7=dcdccc # White
 
 # Bright colors
-bright0=99908b
-bright1=6f75a4
-bright2=524843
-bright3=756c67
-bright4=bcb4af
-bright5=e4deda
-bright6=c5a784
-bright7=e9e4e0
+bright0=6f6f6f
+bright1=dfaf8f
+bright2=404040
+bright3=606060
+bright4=808080
+bright5=c0c0c0
+bright6=000000
+bright7=ffffff
 # End flavours
 
 [csd]
