feat: Use tofi in place of wmenu

--- a/config/flavours/config.toml
+++ b/config/flavours/config.toml
@@ -7,3 +7,7 @@ template = "foot"
 [[items]]
 file = "~/.config/kak/kakrc"
 template = "kakoune"
+
+[[items]]
+file = "~/.config/tofi/config"
+template = "tofi"
