--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -22,7 +22,9 @@ font=Iosevka Term:size=13
 # dpi-aware=no
 
 # initial-window-size-pixels=700x500  # Or,
-# initial-window-size-chars=<COLSxROWS>
+
+# This will only affect floating windows
+initial-window-size-chars=100x30
 # initial-window-mode=windowed
 # pad=0x0                             # optionally append 'center'
 # resize-by-cells=yes
@@ -81,7 +83,6 @@ font=Iosevka Term:size=13
 [touch]
 # long-press-delay=400
 
-[colors]
 # Start flavours
 # Base16 Zenburn - foot color config
 # elnawe
