--- a/config/flavours/config.toml
+++ b/config/flavours/config.toml
@@ -1,13 +1,15 @@
 shell = "bash -c '{}'"
 
 [[items]]
-file = "~/.config/foot/foot.ini"
-template = "foot"
-
-[[items]]
-file = "~/.config/kak/kakrc"
+file = "~/.config/kak/autoload/colorscheme.kak"
 template = "kakoune"
+hook = "for i in $(kak -l); do echo source ~/.config/kak/autoload/colorscheme.kak | kak -p $i; done"
 
 [[items]]
 file = "~/.config/tofi/config"
 template = "tofi"
+
+[[items]]
+file = "~/.local/bin/scripts/set_theme"
+template = "bashrc"
+hook = "killall set_theme -s USR1"
