spawd and pwd in bar

--- a/config/yambar/config.yml
+++ b/config/yambar/config.yml
@@ -37,4 +37,9 @@ bar:
     - clock:
         time-format: "%Y-%m-%d %H:%M:%S"
         content:
-          - string: {text: "{time}"}
+          string: {text: "{time}"}
+  right:
+    - script:
+        path: ~/.local/bin/scripts/pwd_module
+        args: []
+        content: {string: {text: "{pwd}"}}
